Added link to resume

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<h4>about him</h4>
 						<div>Sajid is a Computer Science Student at <a href="http://uwaterloo.ca" class="loopCol" target="_blank" data-hover="NewsCred">UWaterloo</a> and is presently focusing on Algorithms, Operating Systems and Databases. 
 
-						His ultimate mission is to learn new and upcoming software tools - particularly backend and infrastructure technologies and aims to make something worth remembering that will aid in making peoples' lives easier. Sajid is a team player and is punctual at whatever he is responsible for. He is currently trying to specialize in web-based frameworks and slowly moving on towards infrastructure. Check out his LinkedIn account for more details!
+						His ultimate mission is to learn new and upcoming software tools - particularly backend and infrastructure technologies and aims to make something worth remembering that will aid in making peoples' lives easier. Sajid is a team player and is punctual at whatever he is responsible for. He is currently trying to specialize in web-based frameworks and slowly moving on towards infrastructure. Check out his LinkedIn account and <a style="border-bottom: 2px solid white;" href="https://drive.google.com/file/d/1FQezOi1Dsyflv1wqsxpxOVhwSCZAgFJ8/view?usp=sharing" title="Click Me!">Resume</a>  for more details!
 						
 						
 						<div class="fixedBg noTransition" data-background="webable">
